Fixed leave a review screen sizing on mobile

--- a/src/pages/BookDetailsPage/BookDetails/BookAction/BookReturnAction/BookReturnAction.css
+++ b/src/pages/BookDetailsPage/BookDetails/BookAction/BookReturnAction/BookReturnAction.css
@@ -1,14 +1,3 @@
-.book-review-form-container {
-  background-color: #f7f7f9;
-  position: fixed;
-  z-index: 1299;
-  top: 7.5vh;
-  height: calc(100vh - 7.5vh);
-  left: 0;
-  width: 88vw;
-  padding: 1.5em 1.5em 1.5em 1.5em;
-}
-
 .return-button {
   background-color: #ea592a;
   color: white;
